# lilurl

./: README.md  db.py  lilurl.py  pyproject.toml  shorten.py
static/: robots.txt
templates/: error.html  index.html  shortened.html
