[tool.poetry]
name = "lilurl"
version = "0.1.0"
description = "A service for shortening urls."
authors = ["Gordon Greene <greeng3@obscure-reference.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
